[tool.poetry]
name = "psychology-website"
version = "0.1.0"
description = "A website to promote psychological counseling services"
authors = ["iavalli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
